--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -2,7 +2,7 @@
     background-image: url(../../images/pexels-photo-364308.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 650px;
+    height: 653px;
     color: white;
     font-family: 'Barlow', sans-serif;
 }
@@ -14,6 +14,7 @@
 .btn {
     background-color: rgb(1, 14, 13);
     font-family: 'Barlow', sans-serif;
+    font-weight: bold;
 }
 
 .btn:hover {
