--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -15,6 +15,8 @@
     background-color: rgb(1, 14, 13);
     font-family: 'Barlow', sans-serif;
     font-weight: bold;
+    font-size: 18px;
+    height: 40px;
 }
 
 .btn:hover {
