added profile page

--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -1,4 +1,4 @@
-.jumbotron {
+.home-page {
     background-image: url(../../images/pexels-photo-364308.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
