--- a/client/src/components/Logout/Logout.css
+++ b/client/src/components/Logout/Logout.css
@@ -1,5 +1,9 @@
 .logout {
-    width: 300px;
+    width: 600px;
     margin-top: 80px;
     margin-bottom: 80px;
+}
+
+.rock-hand {
+    margin: 0px;
 }
