--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -1,8 +1,8 @@
 .profileCover {
-    background-image: url(../../images/yoga.jpg);
+    background-image: url(../../images/background.svg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 400px;
+    height: 100%;
     font-family: 'Barlow', sans-serif;
 }
 
@@ -21,7 +21,8 @@
 .card {
     width: 250px;
     padding: 5px;
-    margin-top: -200px;
+    border-radius: 5px;
+    margin-top: 50px;
 }
 
 .card-action a {
@@ -30,10 +31,22 @@
 
 .album {
     width: 250px;
+    height: 250px;
     margin: 5px;
-  
+    border-radius: 5px;
+    padding: 0px;
 }
 
-.profileCard {
-    padding: 0px;
+#gallery {
+    padding-left: 100px;
+    margin-top: 50px;
+}
+
+.card-action:hover { 
+    background-color: rgb(236, 248, 247); 
+   
+  }
+
+img {
+    border-radius: 5px;
 }
