--- a/client/src/components/Activities/Activities.css
+++ b/client/src/components/Activities/Activities.css
@@ -11,3 +11,11 @@
     margin-top: 30px;
     margin-bottom: 50px;
 }
+
+.sportButton:hover { 
+    background-color: rgb(236, 248, 247); 
+  }
+
+.sportButton {
+    background-color: rgb(231, 227, 221);
+}
