added some icons

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -29,7 +29,16 @@
     color: rgb(43, 204, 204) !important;
 }
 
-.album {
+.material-icons {
+    vertical-align: middle;
+    margin: 5px;
+}
+
+.card-action {
+    padding: 0px !important;
+}
+
+.album-photo {
     width: 250px;
     height: 250px;
     margin: 5px;
@@ -39,7 +48,7 @@
 
 #gallery {
     padding-left: 100px;
-    margin-top: 50px;
+    margin-top: 35px;
 }
 
 .card-action:hover { 
@@ -50,3 +59,4 @@
 img {
     border-radius: 5px;
 }
+
