added activities page right before registering user and saving data except for sports that is not been saved

--- a/client/src/components/Activities/Activities.css
+++ b/client/src/components/Activities/Activities.css
@@ -13,9 +13,9 @@
 }
 
 .sportButton:hover { 
-    background-color: rgb(236, 248, 247); 
+    background-color: #e7e3dd;
   }
 
 .sportButton {
-    background-color: rgb(231, 227, 221);
+    background-color: #e7e3dd;
 }
